--- a/README.Rmd
+++ b/README.Rmd
@@ -13,16 +13,18 @@ knitr::opts_chunk$set(
 )
 ```
 
-# sosta
+# Spatial Omic Structure Analysis
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of sosta is to ...
+`sosta` (spatial omics structure analysis) is a framework to reconstruct, characterise and compare spatial structures from spatial omics data.
+
+`sosta` builds on existing R packages for spatial analysis such as `spatstat`, `sf` and `SpatialFeatureExperiment`, which facilitates the implementation of additional custom metrics that fit the needs of users.
 
 ## Installation
 
-You can install the development version of sosta from [GitHub](https://github.com/) with:
+You can install the development version of `sosta` from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
@@ -33,23 +35,8 @@ devtools::install_github("sgunz/sosta")
 
 This is a basic example which shows you how to solve a common problem:
 
-```{r example}
+```{r example, eval = FALSE}
 library(sosta)
 ## basic example code
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
