--- a/vignettes/IMC_DiabetesIslands_Vignette.Rmd
+++ b/vignettes/IMC_DiabetesIslands_Vignette.Rmd
@@ -31,7 +31,7 @@ knitr::opts_chunk$set(
 
 # Setup
 
-```{r setup}
+```{r setup, message=FALSE}
 library("sosta")
 library("dplyr")
 library("ggplot2")
@@ -41,6 +41,7 @@ library("spatstat.explore")
 library("spatstat.geom")
 library("imcdatasets")
 ```
+
 
 # Introduction
 
@@ -75,63 +76,58 @@ plotSpots(spe[,spe[["patient_id"]] == 6126 &
 ```
 # Reconstruction of diabetes islets
 
-## Reconstruction of diabetes islets for one image
+<!-- ## Reconstruction of diabetes islets for one image -->
 
-In this example we will reconstruct the density based on the point pattern density of the islet cells. For this we use functions from the package `r BiocStyle::CRANpkg('spatstat')` which is a convenient package for point pattern analysis. We show the workflow for one image, before continuing to all do it for all images.
+<!-- In this example we will reconstruct the density based on the point pattern density of the islet cells. For this we use functions from the package `r BiocStyle::CRANpkg('spatstat')` which is a convenient package for point pattern analysis. We show the workflow for one image, before continuing to all do it for all images. -->
 
-First we will create a `ppp` object using `SPE2ppp`
+<!-- First we will create a `ppp` object using `SPE2ppp` -->
 
-```{r}
-# Convert the spe object to a point pattern object
-pp <- SPE2ppp(spe, marks = "cell_category", image_col = "image_name", image_id = "E04")
+<!-- ```{r} -->
+<!-- # Convert the spe object to a point pattern object -->
+<!-- pp <- SPE2ppp(spe, marks = "cell_category", image_col = "image_name", image_id = "E04") -->
 
-# Extract the islet cells
-pp.islet <- subset(pp, marks == "islet")
-```
+<!-- # Extract the islet cells -->
+<!-- pp.islet <- subset(pp, marks == "islet") -->
+<!-- ``` -->
 
-Next we will set the default dimension for the resulting image. A lower resolution speed up computation but lead to less exact reconstruction. We set a default of 500 pixels for the x dimension, the corresponding y dimension gets directly calculated.
+<!-- Next we will set the default dimension for the resulting image. A lower resolution speed up computation but lead to less exact reconstruction. We set a default of 500 pixels for the x dimension, the corresponding y dimension gets directly calculated. -->
 
-```{r}
-# Set the dimensions of the resulting reconstruction
-dimyx <- getDimXY(pp.islet, 500)
-```
+<!-- ```{r} -->
+<!-- # Set the dimensions of the resulting reconstruction -->
+<!-- dimyx <- getDimXY(pp.islet, 500) -->
+<!-- ``` -->
 
-To select the threshold for the reconstruction we look at the density of one image. The function `bw.diggle` estimates the bandwith for the smoothing kernel. The result is a image (m x n matrix with density values).
+<!-- To select the threshold for the reconstruction we look at the density of one image. The function `bw.diggle` estimates the bandwith for the smoothing kernel. The result is a image (m x n matrix with density values). -->
 
-```{r}
-# plot the density of the image
-im <- density(pp.islet, sigma = bw.diggle(pp.islet), dimyx = dimyx)
+<!-- ```{r} -->
+<!-- # plot the density of the image -->
+<!-- im <- density(pp.islet, sigma = bw.diggle(pp.islet), dimyx = dimyx) -->
 
-par(mfrow = c(1, 2))
-plot(im)
-hist(im)
-```
+<!-- par(mfrow = c(1, 2)) -->
+<!-- plot(im) -->
+<!-- hist(im) -->
+<!-- ``` -->
 
-From the histogram and the density image we can see that there are a lot of pixels with 0 density. To set the threshold at 0.0025 to include as many cells as possible in the estimation of the islets. We then use the function `reconstructShapeDensity` to reconstruct the image. The result is a `r BiocStyle::CRANpkg('sf')` polygon. 
+<!-- From the histogram and the density image we can see that there are a lot of pixels with 0 density. To set the threshold at 0.0025 to include as many cells as possible in the estimation of the islets. We then use the function `reconstructShapeDensity` to reconstruct the image. The result is a `r BiocStyle::CRANpkg('sf')` polygon.  -->
 
 ## Reconstruction of diabetes islets for one image
 
 In this example we will reconstruct the density based on the point pattern density of the islet cells. We will start with a few images to set the necessary parameters.
 
 
-> # TODO:  have to bandwith for all images the same
-
 
 ```{r}
-# Convert the spe object to a point pattern object
-pp <- SPE2ppp(spe, marks = "cell_category", image_col = "image_name", image_id = "E04")
-bw.diggle(pp)
+n <- estimateKernelDensitySPE(
+  spe,
+  marks = "cell_category",
+  image_col = "image_name",
+  mark_select = "islet",
+  nimages = 20,
+  ncores = 4
+)
 
+sigma <- mean(n)
 
-all_images <- colData(spe)$image_name |> unique()
-
-bndws <- lapply(all_images, function(x){
-  pp <- SPE2ppp(spe, marks = "cell_category", image_col = "image_name", image_id = x)
-  bndw <- bw.diggle(pp)
-  return(bndw)
-})
-
-m <- mean(unlist(bndws))
 ```
 
 
@@ -141,16 +137,7 @@ shapeIntensityImage(
   marks = "cell_category",
   image_col = "image_name",
   image_id = "E04",
-  bndw = 15,
-  mark_select = "islet"
-)
-
-shapeIntensityImage(
-  spe,
-  marks = "cell_category",
-  image_col = "image_name",
-  image_id = "J20",
-  bndw = 15,
+  bndw = sigma,
   mark_select = "islet"
 )
 
@@ -159,34 +146,31 @@ shapeIntensityImage(
 From the histogram and the density image we can see that there are a lot of pixels with 0 density. To set the threshold at 0.004. We then use the function `reconstructShapeDensity` to reconstruct the image. The result is a `r BiocStyle::CRANpkg('sf')` polygon. 
 
 
-```{r, eval=FALSE}
+```{r}
 islet <- reconstructShapeDensityImage(
   spe,
   marks = "cell_category",
   image_col = "image_name",
   image_id = "E04",
   mark_select = "islet",
-  bndw = 15,
+  bndw = sigma,
   dim = 500,
   thres = 0.0025
 )
-
-
 ```
 
 We can plot both the points and the estimated islets.
 
-```{r, eval=FALSE, include=FALSE}
-p <- plotSpots(spe[,spe[["patient_id"]] == 6126 &
-                spe[["image_name"]] %in% c("E04")],
-          annotate = "cell_category",
-          sample_id = "image_name",
-          in_tissue = NULL,
-          y_reverse = FALSE) +
-    geom_sf(data = islet, aes(), fill = NA)
-  
-p
-```
+<!-- ```{r, eval=FALSE, include=FALSE} -->
+<!-- p <- plotSpots(spe[,spe[["patient_id"]] == 6126 & -->
+<!--                 spe[["image_name"]] %in% c("E04")], -->
+<!--           annotate = "cell_type", -->
+<!--           sample_id = "image_name", -->
+<!--           in_tissue = NULL, -->
+<!--           y_reverse = FALSE) + -->
+<!--     geom_sf(data = islet, aes(), fill = NA) -->
+<!-- ``` -->
+
 
 ```{r}
 # Cannot easily add geom_df to plotSpots, therefore custom function here...
@@ -197,22 +181,18 @@ ggplot() +
   geom_point(data = spe_sel_df,
              aes(x = cell_x, y = cell_y, color = cell_category), size = 0.75) +
   theme_light() +
-  scale_color_brewer(palette = "Set1") +
+  #scale_color_brewer(palette = "Set1") +
   geom_sf(data = islet, fill = NA, color = "black")
 ```
 
-
-```{r, eval=FALSE, include=FALSE}
-plot(pp.islet)
-plot(islet, add = TRUE)
-```
 ## Reconstruction of diabetes islets for all images
 
 ```{r, eval=FALSE}
 all_islets <- reconstructShapeDensitySPE(spe, marks = "cell_category",
                              image_col = "image_name",
                              mark_select = "islet", 
-                             thres = 0.005,
+                             bndw = sigma,
+                             thres = 0.0025,
                              ncores = 4)
 ```
 
