--- a/vignettes/IMC_DiabetesIslands_Vignette.Rmd
+++ b/vignettes/IMC_DiabetesIslands_Vignette.Rmd
@@ -76,68 +76,102 @@ plotSpots(spe[,spe[["patient_id"]] == 6126 &
 ```
 # Reconstruction of diabetes islets
 
-<!-- ## Reconstruction of diabetes islets for one image -->
+## Reconstruction of diabetes islets for one image
 
-<!-- In this example we will reconstruct the density based on the point pattern density of the islet cells. For this we use functions from the package `r BiocStyle::CRANpkg('spatstat')` which is a convenient package for point pattern analysis. We show the workflow for one image, before continuing to all do it for all images. -->
+In this example we will reconstruct the density based on the point pattern density of the islet cells. For this we use functions from the package `r BiocStyle::CRANpkg('spatstat')` which is a convenient package for point pattern analysis. We show the workflow for one image, before continuing to all do it for all images.
 
-<!-- First we will create a `ppp` object using `SPE2ppp` -->
+First we will create a `ppp` object using `SPE2ppp`
 
-<!-- ```{r} -->
-<!-- # Convert the spe object to a point pattern object -->
-<!-- pp <- SPE2ppp(spe, marks = "cell_category", image_col = "image_name", image_id = "E04") -->
+```{r}
+# Convert the spe object to a point pattern object
+pp <- SPE2ppp(spe, marks = "cell_category", image_col = "image_name", image_id = "E04")
 
-<!-- # Extract the islet cells -->
-<!-- pp.islet <- subset(pp, marks == "islet") -->
-<!-- ``` -->
+# Extract the islet cells
+pp.islet <- subset(pp, marks == "islet")
+```
 
-<!-- Next we will set the default dimension for the resulting image. A lower resolution speed up computation but lead to less exact reconstruction. We set a default of 500 pixels for the x dimension, the corresponding y dimension gets directly calculated. -->
+Next we will set the default dimension for the resulting image. A lower resolution speed up computation but lead to less exact reconstruction. We set a default of 500 pixels for the x dimension, the corresponding y dimension gets directly calculated.
 
-<!-- ```{r} -->
-<!-- # Set the dimensions of the resulting reconstruction -->
-<!-- dimyx <- getDimXY(pp.islet, 500) -->
-<!-- ``` -->
+```{r}
+# Set the dimensions of the resulting reconstruction
+dimyx <- getDimXY(pp.islet, 500)
+```
 
-<!-- To select the threshold for the reconstruction we look at the density of one image. The function `bw.diggle` estimates the bandwith for the smoothing kernel. The result is a image (m x n matrix with density values). -->
+To select the threshold for the reconstruction we look at the density of one image. The function `bw.diggle` estimates the bandwith for the smoothing kernel. The result is a image (m x n matrix with density values).
 
-<!-- ```{r} -->
-<!-- # plot the density of the image -->
-<!-- im <- density(pp.islet, sigma = bw.diggle(pp.islet), dimyx = dimyx) -->
+```{r}
+# plot the density of the image
+im <- density(pp.islet, sigma = bw.diggle(pp.islet), dimyx = dimyx)
 
-<!-- par(mfrow = c(1, 2)) -->
-<!-- plot(im) -->
-<!-- hist(im) -->
-<!-- ``` -->
+par(mfrow = c(1, 2))
+plot(im)
+hist(im)
+```
 
-<!-- From the histogram and the density image we can see that there are a lot of pixels with 0 density. To set the threshold at 0.0025 to include as many cells as possible in the estimation of the islets. We then use the function `reconstructShapeDensity` to reconstruct the image. The result is a `r BiocStyle::CRANpkg('sf')` polygon.  -->
+From the histogram and the density image we can see that there are a lot of pixels with 0 density. To set the threshold at 0.0025 to include as many cells as possible in the estimation of the islets. We then use the function `reconstructShapeDensity` to reconstruct the image. The result is a `r BiocStyle::CRANpkg('sf')` polygon.
+
 
 ## Reconstruction of diabetes islets for one image
 
 In this example we will reconstruct the density based on the point pattern density of the islet cells. We will start with a few images to set the necessary parameters.
 
 
-
-```{r}
+```{r, eval=FALSE}
 n <- estimateKernelDensitySPE(
   spe,
   marks = "cell_category",
   image_col = "image_name",
   mark_select = "islet",
-  nimages = 20,
-  ncores = 4
+  ncores = 5,
+  plot_hist = TRUE
 )
 
-sigma <- mean(n)
+thres <- mean(n$thres)
+bndw <- mean(n$bndw)
 
 ```
 
+```{r, eval=FALSE}
+colData(spe)$image_name |> unique()
 
-```{r}
+
+shapeIntensityImage(
+  spe,
+  marks = "cell_category",
+  image_col = "image_name",
+  image_id = "J13",
+  bndw = bndw,
+  mark_select = "islet"
+)
+
+
+p2 <- reconstructShapeDensityImage(
+  spe,
+  marks = "cell_category",
+  image_col = "image_name",
+  image_id = "J13",
+  mark_select = "islet"
+)
+
+spe_sel <- spe[, spe[["image_name"]] %in% c("J13")]
+spe_sel_df <- cbind(spatialCoords(spe_sel), colData(spe_sel))
+
+ggplot() +
+  geom_point(data = spe_sel_df,
+             aes(x = cell_x, y = cell_y, color = cell_category), size = 0.75) +
+  theme_light() +
+  #scale_color_brewer(palette = "Set1") +
+  geom_sf(data = p2, fill = NA, color = "black")
+```
+
+
+```{r, eval=FALSE}
 shapeIntensityImage(
   spe,
   marks = "cell_category",
   image_col = "image_name",
   image_id = "E04",
-  bndw = sigma,
+  bndw = bndw,
   mark_select = "islet"
 )
 
@@ -146,20 +180,31 @@ shapeIntensityImage(
 From the histogram and the density image we can see that there are a lot of pixels with 0 density. To set the threshold at 0.004. We then use the function `reconstructShapeDensity` to reconstruct the image. The result is a `r BiocStyle::CRANpkg('sf')` polygon. 
 
 
-```{r}
+```{r, eval=FALSE}
 islet <- reconstructShapeDensityImage(
   spe,
   marks = "cell_category",
   image_col = "image_name",
   image_id = "E04",
   mark_select = "islet",
-  bndw = sigma,
+  bndw = bndw,
   dim = 500,
-  thres = 0.0025
+  thres =  thres
 )
 ```
 
 We can plot both the points and the estimated islets.
+
+```{r, eval=FALSE}
+islet <- reconstructShapeDensityImage(
+  spe,
+  marks = "cell_category",
+  image_col = "image_name",
+  image_id = "E04",
+  mark_select = "islet"
+) 
+```
+
 
 <!-- ```{r, eval=FALSE, include=FALSE} -->
 <!-- p <- plotSpots(spe[,spe[["patient_id"]] == 6126 & -->
@@ -172,7 +217,7 @@ We can plot both the points and the estimated islets.
 <!-- ``` -->
 
 
-```{r}
+```{r, eval=FALSE}
 # Cannot easily add geom_df to plotSpots, therefore custom function here...
 spe_sel <- spe[, spe[["image_name"]] %in% c("E04")]
 spe_sel_df <- cbind(spatialCoords(spe_sel), colData(spe_sel))
@@ -195,7 +240,6 @@ all_islets <- reconstructShapeDensitySPE(spe, marks = "cell_category",
                              thres = 0.0025,
                              ncores = 4)
 ```
-
 
 
 ```{r sessionInfo}
