minimal vignette; checks failing

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 
 `sosta` (spatial omics structure analysis) is a framework to reconstruct, characterise and compare spatial structures from spatial omics data.
 
-`sosta` builds on existing R packages for spatial analysis such as `spatstat`, `sf` and `SpatialFeatureExperiment`, which facilitates the implementation of additional custom metrics that fit the needs of users.
+`sosta` builds on existing R packages for spatial analysis such as `spatstat`, `sf` and the [Bioconductor](https://bioconductor.org/) environment by integrating with packages `SpatialExperiment` and `SpatialFeatureExperiment`, which facilitates the implementation of additional custom metrics that fit the needs of users.
 
 ## Installation
 
@@ -31,12 +31,8 @@ You can install the development version of `sosta` from [GitHub](https://github.
 devtools::install_github("sgunz/sosta")
 ```
 
-## Example
+## Feedback
 
-This is a basic example which shows you how to solve a common problem:
+We are happy to get your feedback. Please send it via email to [Samuel Gunz](https://www.mls.uzh.ch/en/research/robinson/groupmembers/samuel-gunz.html) or open a issue on [GitHub](https://github.com/sgunz/sosta/issues).
 
-```{r example, eval = FALSE}
-library(sosta)
-## basic example code
-```
 
