--- a/vignettes/IMC_DiabetesIslands_Vignette.Rmd
+++ b/vignettes/IMC_DiabetesIslands_Vignette.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Reconstrucion and analysis of diabetes island from IMC data"
+title: "Reconstrucion and analysis of pancreatic island from IMC data"
 author: 
   - name: "Samuel Gunz"
     affiliation:
@@ -29,17 +29,19 @@ knitr::opts_chunk$set(
 )
 ```
 
-# Setup
+## Setup
 
 ```{r setup, message=FALSE}
 library("sosta")
 library("dplyr")
+library("tidyr")
 library("ggplot2")
 library("patchwork")
 library("ggspavis")
 library("spatstat.explore")
 library("spatstat.geom")
 library("imcdatasets")
+
 ```
 
 
@@ -47,14 +49,14 @@ library("imcdatasets")
 
 In this vignette we will use data from the package `r BiocStyle::Biocpkg('imcdatasets')`. The dataset contains imaging mass cytometry (IMC) data of pancreatic islets human donors at different stages of type 1 diabetes (T1D) [@damondMapHumanType2019]. 
 
-From the manual of `r BiocStyle::Biocpkg('imcdatasets')` and the original publication by @damondMapHumanType2019 we know that
+<!-- From the manual of `r BiocStyle::Biocpkg('imcdatasets')` and the original publication by @damondMapHumanType2019 we know that -->
 
->The three donors in the subset present the following characteristics:
->
-> 6126 is a non-diabetic donor, with large islets containing many beta cells, severe infiltration of the exocrine pancreas with myeloid cells but limited infiltration of islets.
->
-> 6414 is a donor with recent T1D onset (shortly after diagnosis) showing partial beta cell destruction and mild infiltration of islets with T cells.
-> 6180 is a donor with long-duration T1D (11 years after diagnosis), showing near-total beta cell destruction and limited immune cell infiltration in both the islets and the pancreas.
+<!-- >The three donors in the subset present the following characteristics: -->
+<!-- > -->
+<!-- > 6126 is a non-diabetic donor, with large islets containing many beta cells, severe infiltration of the exocrine pancreas with myeloid cells but limited infiltration of islets. -->
+<!-- > -->
+<!-- > 6414 is a donor with recent T1D onset (shortly after diagnosis) showing partial beta cell destruction and mild infiltration of islets with T cells. -->
+<!-- > 6180 is a donor with long-duration T1D (11 years after diagnosis), showing near-total beta cell destruction and limited immune cell infiltration in both the islets and the pancreas. -->
 
 
 ```{r loading}
@@ -74,47 +76,48 @@ plotSpots(spe[,spe[["patient_id"]] == 6126 &
           in_tissue = NULL) +
   facet_wrap(~ image_name)
 ```
-# Reconstruction of diabetes islets
 
-## Reconstruction of diabetes islets for one image
+# Reconstruction of pancreatic islets
 
-In this example we will reconstruct the density based on the point pattern density of the islet cells. For this we use functions from the package `r BiocStyle::CRANpkg('spatstat')` which is a convenient package for point pattern analysis. We show the workflow for one image, before continuing to all do it for all images.
+<!-- ## Reconstruction of pancreatic islets for one image -->
 
-First we will create a `ppp` object using `SPE2ppp`
+<!-- In this example we will reconstruct the density based on the point pattern density of the islet cells. For this we use functions from the package `r BiocStyle::CRANpkg('spatstat')` which is a convenient package for point pattern analysis. We show the workflow for one image, before continuing to all do it for all images. -->
 
-```{r}
-# Convert the spe object to a point pattern object
-pp <- SPE2ppp(spe, marks = "cell_category", image_col = "image_name", image_id = "E04")
+<!-- First we will create a `ppp` object using `SPE2ppp` -->
 
-# Extract the islet cells
-pp.islet <- subset(pp, marks == "islet")
-```
+<!-- ```{r} -->
+<!-- # Convert the spe object to a point pattern object -->
+<!-- pp <- SPE2ppp(spe, marks = "cell_category", image_col = "image_name", image_id = "E04") -->
 
-Next we will set the default dimension for the resulting image. A lower resolution speed up computation but lead to less exact reconstruction. We set a default of 500 pixels for the x dimension, the corresponding y dimension gets directly calculated.
+<!-- # Extract the islet cells -->
+<!-- pp.islet <- subset(pp, marks == "islet") -->
+<!-- ``` -->
 
-```{r}
-# Set the dimensions of the resulting reconstruction
-dimyx <- getDimXY(pp.islet, 500)
-```
+<!-- Next we will set the default dimension for the resulting image. A lower resolution speed up computation but lead to less exact reconstruction. We set a default of 500 pixels for the x dimension, the corresponding y dimension gets directly calculated. -->
 
-To select the threshold for the reconstruction we look at the density of one image. The function `bw.diggle` estimates the bandwith for the smoothing kernel. The result is a image (m x n matrix with density values).
+<!-- ```{r} -->
+<!-- # Set the dimensions of the resulting reconstruction -->
+<!-- dimyx <- getDimXY(pp.islet, 500) -->
+<!-- ``` -->
 
-```{r}
-# plot the density of the image
-im <- density(pp.islet, sigma = bw.diggle(pp.islet), dimyx = dimyx)
+<!-- To select the threshold for the reconstruction we look at the density of one image. The function `bw.diggle` estimates the bandwith for the smoothing kernel. The result is a image (m x n matrix with density values). -->
 
-par(mfrow = c(1, 2))
-plot(im)
-hist(im)
-```
+<!-- ```{r} -->
+<!-- # plot the density of the image -->
+<!-- im <- density(pp.islet, sigma = bw.diggle(pp.islet), dimyx = dimyx) -->
 
-From the histogram and the density image we can see that there are a lot of pixels with 0 density. To set the threshold at 0.0025 to include as many cells as possible in the estimation of the islets. We then use the function `reconstructShapeDensity` to reconstruct the image. The result is a `r BiocStyle::CRANpkg('sf')` polygon.
+<!-- par(mfrow = c(1, 2)) -->
+<!-- plot(im) -->
+<!-- hist(im) -->
+<!-- ``` -->
 
+<!-- From the histogram and the density image we can see that there are a lot of pixels with 0 density. To set the threshold at 0.0025 to include as many cells as possible in the estimation of the islets. We then use the function `reconstructShapeDensity` to reconstruct the image. The result is a `r BiocStyle::CRANpkg('sf')` polygon. -->
 
-## Reconstruction of diabetes islets for one image
+## Reconstruction of pancreatic islets for one image
 
-In this example we will reconstruct the density based on the point pattern density of the islet cells. We will start with a few images to set the necessary parameters.
+In this example we will reconstruct the density based on the point pattern density of the islet cells. We will start with estimating the parameters that we use for reconstruction afterwards.
 
+The function `estimateReconstructionParametersSPE` returns two plots with the estimated parameters for each image. The parameter `bndw` is the bandwidth parameter that is used for estimating the intensity profile of the point pattern. The parameter `thres` is the estimated parameter for the denisty threshold for reconstruction.
 
 ```{r, eval=FALSE}
 n <- estimateReconstructionParametersSPE(
@@ -126,14 +129,13 @@ n <- estimateReconstructionParametersSPE(
   plot_hist = TRUE
 )
 
-thres <- mean(n$thres)
-bndw <- mean(n$bndw)
+(thres <- mean(n$thres))
+(bndw <- mean(n$bndw))
 
 ```
 
-```{r, eval=FALSE}
+```{r, include=FALSE, eval=FALSE}
 colData(spe)$image_name |> unique()
-
 
 shapeIntensityImage(
   spe,
@@ -164,6 +166,7 @@ ggplot() +
   geom_sf(data = p2, fill = NA, color = "black")
 ```
 
+Using the `bdnw` parameter we can plot the density image and a distribution of the density values using the function `shapeIntensityImage`.
 
 ```{r, eval=FALSE}
 shapeIntensityImage(
@@ -177,7 +180,7 @@ shapeIntensityImage(
 
 ```
 
-From the histogram and the density image we can see that there are a lot of pixels with 0 density. To set the threshold at 0.004. We then use the function `reconstructShapeDensity` to reconstruct the image. The result is a `r BiocStyle::CRANpkg('sf')` polygon. 
+We then use the function `reconstructShapeDensity` to reconstruct the image. The result is a `r BiocStyle::CRANpkg('sf')` polygon. 
 
 
 ```{r, eval=FALSE}
@@ -193,17 +196,17 @@ islet <- reconstructShapeDensityImage(
 )
 ```
 
-We can plot both the points and the estimated islets.
+We can plot both the points and the estimated islets polygon.
 
-```{r, eval=FALSE}
-islet <- reconstructShapeDensityImage(
-  spe,
-  marks = "cell_category",
-  image_col = "image_name",
-  image_id = "E04",
-  mark_select = "islet"
-) 
-```
+<!-- ```{r, include=FALSE, eval=FALSE} -->
+<!-- islet2 <- reconstructShapeDensityImage( -->
+<!--   spe, -->
+<!--   marks = "cell_category", -->
+<!--   image_col = "image_name", -->
+<!--   image_id = "E04", -->
+<!--   mark_select = "islet" -->
+<!-- )  -->
+<!-- ``` -->
 
 
 <!-- ```{r, eval=FALSE, include=FALSE} -->
@@ -230,9 +233,11 @@ ggplot() +
   geom_sf(data = islet, fill = NA, color = "black")
 ```
 
-## Reconstruction of diabetes islets for all images
+## Reconstruction of pancreatic islets for all images
 
-```{r, eval=FALSE}
+The function `reconstructShapeDensitySPE` reconstructs the islets for all images in the `spe` object.
+
+```{r, eval=TRUE}
 all_islets <- reconstructShapeDensitySPE(spe, marks = "cell_category",
                              image_col = "image_name",
                              mark_select = "islet", 
@@ -241,6 +246,85 @@ all_islets <- reconstructShapeDensitySPE(spe, marks = "cell_category",
                              ncores = 4)
 ```
 
+# Calculation of structure metrics
+
+We use the function `totalShapeMetrics` to calculate a set of metrics related to the shape of the islets.
+
+```{r}
+islet_shape_metrics <- totalShapeMetrics(all_islets)
+```
+
+<!-- ```{r} -->
+<!-- # This snippet selects all patient information that is not specific to the individual cell -->
+<!-- unique_columns <- colData(spe) |> -->
+<!--   as_tibble() |> -->
+<!--   group_by(image_name) |> -->
+<!--   summarize(across(everything(), ~n_distinct(.x) == 1)) %>%  # Check uniqueness for each column per patient_id -->
+<!--   summarise(across(everything(), all)) %>%                   # Identify columns that are unique across all patients -->
+<!--   select(-image_name) |> -->
+<!--   tidyr::pivot_longer(everything(), names_to = "column", values_to = "is_unique") %>% -->
+<!--   dplyr::filter(is_unique == TRUE) %>% -->
+<!--   pull(column) -->
+<!-- ``` -->
+
+The result is a simple feature collection with polygons. We will add some patient level information to the simple feature collection for plotting afterwards.
+
+```{r}
+patient_data <- colData(spe) |>
+  as_tibble() |>
+  group_by(image_name) |>
+  select(all_of(c("patient_stage",  "tissue_slide", "tissue_region",
+                  "patient_id", "patient_disease_duration", "patient_age",
+                  "patient_gender", "patient_ethnicity", "patient_BMI", "sample_id"))) |>
+  unique()
+
+all_islets <- dplyr::left_join(all_islets, patient_data, by = "image_name")
+```
+
+
+```{r}
+all_islets <- cbind(all_islets, t(islet_shape_metrics))
+```
+
+## Plot structure metrics
+
+
+We use PCA to get an overview of the different features. Each dot represent one structure.
+
+
+```{r}
+library(ggfortify)
+
+autoplot(prcomp(t(islet_shape_metrics), scale. = TRUE),
+          x = 1, y = 2,
+         data = all_islets,
+         color = "patient_stage",
+         size = 2,
+         # shape = 'type',
+         loadings = TRUE, loadings.colour = 'steelblue3',
+         loadings.label = TRUE, loadings.label.size = 3,
+         loadings.label.repel = TRUE,
+         loadings.label.colour = 'black') +
+    scale_color_brewer(palette = "Dark2") +
+  theme_bw() +
+  coord_fixed()
+```
+A boxplot reveals differences of the shape metrics between patient stages.
+
+```{r, fig.width=8, fig.height=6}
+all_islets |> 
+  sf::st_drop_geometry() |> 
+  select(patient_stage, rownames(islet_shape_metrics)) |> 
+  pivot_longer(-patient_stage) |> 
+  ggplot(aes(x = patient_stage, y = value, fill = patient_stage)) +
+  geom_boxplot() +
+  facet_wrap(~name, scales = "free") +
+  scale_fill_brewer(palette = "Dark2") +
+  scale_x_discrete(guide = guide_axis(n.dodge = 2)) +
+  guides(fill = "none") +
+  theme_bw()
+  
+```
 
 ```{r sessionInfo}
 sessionInfo()
