moved bib to vignettes, update Rd

--- a/vignettes/IMC_DiabetesIslets_Vignette.Rmd
+++ b/vignettes/IMC_DiabetesIslets_Vignette.Rmd
@@ -19,7 +19,7 @@ vignette: >
   %\VignetteIndexEntry{Reconstrucion and analysis of pancreatic islets from IMC data}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
-bibliography: ../sosta.bib
+bibliography: sosta.bib
 ---
 
 
